WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70118
[EFL] Do not check for Frame::contentRenderer() in ewk_view_repaint.
https://bugs.webkit.org/show_bug.cgi?id=70118
Summary
[EFL] Do not check for Frame::contentRenderer() in ewk_view_repaint.
Raphael Kubo da Costa (:rakuco)
Reported
2011-10-14 11:21:10 PDT
[EFL] Do not check for Frame::contentRenderer() in ewk_view_repaint.
Attachments
Patch
(1.71 KB, patch)
2011-10-14 11:22 PDT
,
Raphael Kubo da Costa (:rakuco)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Raphael Kubo da Costa (:rakuco)
Comment 1
2011-10-14 11:22:24 PDT
Created
attachment 111031
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2011-10-15 05:58:03 PDT
Comment on
attachment 111031
[details]
Patch Tests are great :-)
WebKit Review Bot
Comment 3
2011-10-17 05:37:27 PDT
Comment on
attachment 111031
[details]
Patch Rejecting
attachment 111031
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: uirements: ('./',) Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-commit-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Error: 'depot_tools/gclient sync' failed 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 107. Re-trying 'depot_tools/gclient sync' No such file or directory at Tools/Scripts/update-webkit line 104. Full output:
http://queues.webkit.org/results/10085019
Leandro Pereira
Comment 4
2011-10-17 11:13:20 PDT
Comment on
attachment 111031
[details]
Patch Queueing it again, as it seems that the error was a minor hiccup in the CQ.
WebKit Review Bot
Comment 5
2011-10-17 17:43:39 PDT
Comment on
attachment 111031
[details]
Patch Clearing flags on attachment: 111031 Committed
r97682
: <
http://trac.webkit.org/changeset/97682
>
WebKit Review Bot
Comment 6
2011-10-17 17:43:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug