[EFL] Do not check for Frame::contentRenderer() in ewk_view_repaint. https://bugs.webkit.org/show_bug.cgi?id=70118

Patch by Raphael Kubo da Costa <kubo@profusion.mobi> on 2011-10-17
Reviewed by Kenneth Rohde Christiansen.

When we have a scrollbar with an actual width, there might be a call
to ChromeClientEfl::invalidateContentsAndWindow() after
Document::detach() was called, making the call to contentRenderer()
return 0 even though everything is fine.

Example test case: animations/animation-shorthand.html.

* ewk/ewk_view.cpp:
(ewk_view_repaint):

Canonical link: https://commits.webkit.org/86404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97682 268f45cc-cd09-0410-ab3c-d52691b4dbfc